--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,20 +3,13 @@
     <!-- the theme applied to the application or activity -->
     <style name="AppTheme"
         parent="@style/Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:actionBarStyle">@style/MyActionBar</item>
-
+        <item name="colorPrimaryDark">#00695C</item>
+        <item name="colorPrimary">#009688</item>
+        <item name="homeAsUpIndicator">@drawable/icon_menu</item>
+        <item name="android:homeAsUpIndicator">@drawable/icon_menu</item>
         <!-- Support library compatibility -->
-        <item name="actionBarStyle">@style/MyActionBar</item>
     </style>
 
-    <!-- ActionBar styles -->
-    <style name="MyActionBar"
-        parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
-        <item name="android:background">@drawable/actionbar_bg</item>
-
-        <!-- Support library compatibility -->
-        <item name="background">@drawable/actionbar_bg</item>
-    </style>
 
     <!-- Main screen -->
     <style name="MainScreenFont" parent="@android:style/TextAppearance.Medium">
