--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">12dp</dimen>
 
     <dimen name="main_icon_small_size">67dp</dimen>
+    <dimen name="main_icon_large_size">99dp</dimen>
 </resources>
