--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/login_screen"
     tools:context="at.kropf.curriculumvitae.LoginActivity">
 
     <!-- Login progress -->
@@ -27,6 +28,7 @@
         <LinearLayout
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
+            android:layout_marginTop="15dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical">
@@ -41,14 +43,31 @@
                 android:visibility="invisible"
                 app:border_color="#FF000000"/>
 
-            <AutoCompleteTextView
-                android:id="@+id/email"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_email"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:singleLine="true" />
+                android:layout_marginTop="12dp"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="@string/hello"
+                    style="@style/MainScreenFont"
+                    android:visibility="gone"
+                    android:id="@+id/txtHello" />
+
+                <AutoCompleteTextView
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:background="#ffffff"
+                    android:padding="5dp"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_email"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
+                    android:singleLine="true" />
+            </RelativeLayout>
 
             <EditText
                 android:id="@+id/password"
@@ -56,21 +75,65 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/prompt_password"
                 android:imeActionId="@+id/login"
+                android:maxLength="4"
                 android:imeActionLabel="@string/action_sign_in_short"
                 android:imeOptions="actionUnspecified"
-                android:inputType="textPassword"
+                android:inputType="numberPassword"
                 android:maxLines="1"
                 android:visibility="gone"
                 android:singleLine="true" />
 
-            <Button
-                android:id="@+id/email_sign_in_button"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <Button
+                    android:id="@+id/check_user_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#00695C"
+                    android:textColor="#ffffff"
+                    android:fontFamily="sans-serif-thin"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/next"
+                    android:textStyle="bold" />
+                <Button
+                    android:id="@+id/email_sign_in_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#00695C"
+                    android:visibility="gone"
+                    android:textColor="#ffffff"
+                    android:fontFamily="sans-serif-thin"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/login"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+
+
+            <TextView
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in"
-                android:textStyle="bold" />
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:textSize="18sp"
+                style="@style/MainScreenFont"
+                android:id="@+id/differentAccount"
+                android:visibility="gone"
+                android:textColor="#498AF3"
+                android:text="@string/differentAccount"/>
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:clickable="true"
+                android:id="@+id/noAccount"
+                style="@style/MainScreenFont"
+                android:textColor="#498AF3"
+                android:text="@string/noAccount"/>
 
         </LinearLayout>
     </ScrollView>
