--- a/app/src/main/res/layout/activity_work.xml
+++ b/app/src/main/res/layout/activity_work.xml
@@ -17,8 +17,6 @@
             android:id="@+id/imgWork"
             android:layout_width="@dimen/main_icon_large_size"
             android:layout_height="@dimen/main_icon_large_size"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:src="@drawable/icon_work"
             android:transitionName="@string/work" />
@@ -39,7 +37,7 @@
         android:layout_height="240dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout3"
+        android:layout_below="@+id/headWrapper"
         android:layout_marginLeft="140dp"
         android:layout_marginStart="83dp"
         android:background="#494646" />
@@ -49,7 +47,7 @@
         android:layout_marginTop="22dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout3">
+        android:layout_below="@+id/headWrapper">
 
         <TextView
             android:id="@+id/textView"
@@ -60,7 +58,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginStart="29dp"
             android:layout_marginTop="20dp"
-            android:text="Juli-November" />
+            android:text="@string/month_akaryon"
+            android:layout_width="90dp" />
 
         <TextView
             android:id="@+id/textView2"
@@ -69,7 +68,7 @@
             android:layout_alignStart="@+id/textView"
             android:layout_below="@+id/textView"
             android:layout_marginTop="5dp"
-            android:text="2012"
+            android:text="@string/year_akaryon"
             android:textSize="16sp" />
 
         <ImageView
@@ -88,7 +87,7 @@
             android:layout_alignBottom="@+id/textView"
             android:layout_alignEnd="@+id/textView4"
             android:layout_alignRight="@+id/textView4"
-            android:text="akaryon GmbH"
+            android:text="@string/akaryon"
             android:textSize="23sp" />
 
         <TextView
@@ -97,15 +96,16 @@
             android:layout_alignBottom="@+id/textView2"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="17dp"
-            android:text="Ferialpraktikum/Teilzeit" />
+            android:layout_marginRight="12dp"
+            android:layout_marginEnd="12dp"
+            android:text="@string/akaryon_1" />
 
         <TextView
             android:id="@+id/textView5"
             style="@style/WorkText"
             android:layout_width="150dp"
-            android:gravity="right"
-            android:text="PHP Entwicklung mit CodeIgniter"
+            android:gravity="end"
+            android:text="@string/akaryon_2"
             android:layout_below="@+id/textView2"
             android:layout_alignRight="@+id/textView4"
             android:layout_alignEnd="@+id/textView4"
@@ -117,7 +117,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rl1"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="50dp">
 
         <TextView
             android:id="@+id/textView6"
@@ -127,16 +127,16 @@
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="25dp"
-            android:text="2013-2015"
+            android:text="@string/year_nekom"
             android:textSize="16sp"
-            android:visibility="visible" />
+            android:visibility="visible"
+            android:layout_width="90dp" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="65dp"
             android:layout_height="65dp"
             android:layout_below="@+id/textView8"
-            android:layout_marginLeft="15dp"
             android:layout_toEndOf="@+id/textView6"
             android:layout_toRightOf="@+id/textView6"
             android:src="@drawable/icon_nekom" />
@@ -147,7 +147,7 @@
             android:layout_alignBottom="@+id/textView6"
             android:layout_alignEnd="@+id/textView9"
             android:layout_alignRight="@+id/textView9"
-            android:text="Nekom GmbH"
+            android:text="@string/nekom"
             android:fontFamily="sans-serif-light"
             android:textSize="23sp" />
 
@@ -157,9 +157,10 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/imageView2"
-            android:layout_marginRight="17dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginEnd="12dp"
             android:layout_marginTop="5dp"
-            android:text="Android Entwicklung" />
+            android:text="@string/nekom_1" />
 
         <TextView
             android:id="@+id/textView10"
@@ -168,7 +169,7 @@
             android:layout_alignRight="@+id/textView9"
             android:layout_alignEnd="@+id/textView9"
             android:layout_marginTop="4dp"
-            android:text="Web Entwicklung" />
+            android:text="@string/nekom_2" />
 
     </RelativeLayout>
 
