--- a/app/src/main/res/layout/include_cardview.xml
+++ b/app/src/main/res/layout/include_cardview.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="wrap_content"
     card_view:cardCornerRadius="4dp"
     android:layout_margin="5dp"
     android:background="#ffffff">
@@ -14,20 +14,24 @@
         <ImageView
             android:layout_width="fill_parent"
             android:layout_height="100dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/sketch_header"
             android:id="@+id/cardImage" />
 
         <TextView
             android:id="@+id/cardTitle"
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="40dp"
             android:gravity="center_vertical"
-            android:textColor="@color/black"
-            android:textSize="14dp"
+            android:textColor="#ffffff"
+            android:fontFamily="sans-serif-light"
+            android:textSize="20dp"
+            android:background="#70000000"
             android:layout_alignBottom="@+id/cardImage"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp" />
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -37,7 +41,9 @@
             android:layout_below="@+id/cardTitle"
             android:layout_alignLeft="@+id/cardTitle"
             android:layout_alignStart="@+id/cardTitle"
-            android:layout_marginTop="17dp" />
+            android:padding="12dp"
+            android:fontFamily="sans-serif-thin"
+            android:textSize="15sp"/>
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
