--- a/app/src/main/res/layout/activity_edu.xml
+++ b/app/src/main/res/layout/activity_edu.xml
@@ -2,10 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
     android:orientation="vertical"
     tools:context="at.kropf.curriculumvitae.WorkActivity">
-
 
     <LinearLayout
         android:id="@+id/linearLayout3"
@@ -17,39 +15,33 @@
 
         <ImageView
             android:id="@+id/imgEdu"
-            android:layout_width="@dimen/main_icon_large_size"
-            android:layout_height="@dimen/main_icon_large_size"
-            android:layout_marginTop="20dp"
+            style="@style/headerImage"
             android:src="@drawable/icon_edu"
-            android:transitionName="@string/edu" />
+            android:transitionName="@string/edu"
+            android:contentDescription="@string/edu"/>
 
         <TextView
-            style="@style/MainScreenFont"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:text="@string/edu"
-            android:textColor="#ffffff"
-            android:textSize="24sp" />
+            style="@style/headerText"
+            android:text="@string/edu"/>
     </LinearLayout>
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:layout_marginBottom="25dp"
-        android:background="#ffffff">
+        android:layout_marginStart="@dimen/layout_side_margin"
+        android:layout_marginLeft="@dimen/layout_side_margin"
+        android:layout_marginEnd="@dimen/layout_side_margin"
+        android:layout_marginRight="@dimen/layout_side_margin">
 
         <View
             android:id="@+id/lineView"
             android:layout_width="1dp"
-            android:layout_height="260dp"
+            android:layout_height="250dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="120dp"
             android:layout_marginStart="120dp"
             android:background="#494646" />
-
-
 
         <RelativeLayout
             android:id="@+id/rl3"
@@ -63,8 +55,6 @@
                 android:layout_width="90dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
                 android:layout_marginTop="25dp"
                 android:text="@string/year_fh"
                 android:textSize="16sp"
@@ -75,10 +65,11 @@
                 android:layout_width="65dp"
                 android:layout_height="65dp"
                 android:layout_below="@+id/textView16"
-                android:layout_marginLeft="-22dp"
                 android:layout_toEndOf="@+id/textView16"
                 android:layout_toRightOf="@+id/textView16"
-                android:src="@drawable/icon_fh" />
+                android:src="@drawable/icon_fh"
+                android:contentDescription="@string/fh"/>
+
 
             <TextView
                 android:id="@+id/textView18"
@@ -97,8 +88,6 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignTop="@+id/imageView12"
-                android:layout_marginEnd="12dp"
-                android:layout_marginRight="12dp"
                 android:layout_marginTop="5dp"
                 android:gravity="end"
                 android:text="@string/fh_course_name" />
@@ -120,8 +109,6 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginStart="29dp"
                 android:layout_marginTop="20dp"
                 android:text="@string/year_borg"
                 android:textSize="16sp" />
@@ -134,7 +121,7 @@
                 android:layout_alignRight="@+id/textView4"
                 android:layout_alignTop="@+id/textView"
                 android:fontFamily="sans-serif-light"
-                android:gravity="right"
+                android:gravity="end"
                 android:lines="2"
                 android:text="@string/borg"
                 android:textSize="23sp" />
@@ -146,8 +133,6 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/textView3"
-                android:layout_marginEnd="12dp"
-                android:layout_marginRight="12dp"
                 android:layout_marginTop="5dp"
                 android:gravity="end"
                 android:text="@string/matriculation" />
@@ -157,11 +142,12 @@
                 android:layout_width="65dp"
                 android:layout_height="65dp"
                 android:layout_below="@+id/textView"
-                android:layout_marginLeft="-22dp"
                 android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/textView"
                 android:layout_toRightOf="@+id/textView"
-                android:src="@drawable/icon_borg" />
+                android:src="@drawable/icon_borg"
+                android:contentDescription="@string/borg"/>
+
         </RelativeLayout>
 
     </RelativeLayout>
