--- a/app/src/main/res/layout/activity_skills.xml
+++ b/app/src/main/res/layout/activity_skills.xml
@@ -14,22 +14,15 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imgEdu"
-            android:layout_width="@dimen/main_icon_large_size"
-            android:layout_height="@dimen/main_icon_large_size"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
+            android:id="@+id/imgSkills"
+            style="@style/headerImage"
             android:src="@drawable/icon_skills"
-            android:transitionName="@string/skills" />
+            android:transitionName="@string/skills"
+            android:contentDescription="@string/skills"/>
 
         <TextView
-            style="@style/MainScreenFont"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
-            android:text="@string/skills"
-            android:textColor="#ffffff"
-            android:textSize="24sp" />
+            style="@style/headerText"
+            android:text="@string/skills"/>
     </LinearLayout>
 
     <com.viewpagerindicator.TitlePageIndicator
