--- a/app/src/main/res/layout/activity_work.xml
+++ b/app/src/main/res/layout/activity_work.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
     tools:context="at.kropf.curriculumvitae.WorkActivity">
 
     <LinearLayout
@@ -15,20 +14,14 @@
 
         <ImageView
             android:id="@+id/imgWork"
-            android:layout_width="@dimen/main_icon_large_size"
-            android:layout_height="@dimen/main_icon_large_size"
-            android:layout_marginTop="20dp"
+            style="@style/headerImage"
             android:src="@drawable/icon_work"
-            android:transitionName="@string/work" />
+            android:transitionName="@string/work"
+            android:contentDescription="@string/work"/>
 
         <TextView
-            style="@style/MainScreenFont"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:text="@string/work_head"
-            android:textColor="#ffffff"
-            android:textSize="24sp" />
+            style="@style/headerText"
+            android:text="@string/work_head"/>
     </LinearLayout>
 
 
@@ -39,7 +32,11 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/layout_side_margin"
+            android:layout_marginLeft="@dimen/layout_side_margin"
+            android:layout_marginEnd="@dimen/layout_side_margin"
+            android:layout_marginRight="@dimen/layout_side_margin">
 
             <View
                 android:id="@+id/lineView"
@@ -47,8 +44,8 @@
                 android:layout_height="380dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginLeft="130dp"
-                android:layout_marginStart="130dp"
+                android:layout_marginLeft="120dp"
+                android:layout_marginStart="120dp"
                 android:background="#494646" />
 
             <RelativeLayout
@@ -63,8 +60,6 @@
                     android:layout_width="90dp"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginStart="20dp"
                     android:layout_marginTop="25dp"
                     android:text="@string/year_nekom"
                     android:textSize="16sp"
@@ -75,11 +70,10 @@
                     android:layout_width="65dp"
                     android:layout_height="65dp"
                     android:layout_below="@+id/textView8"
-                    android:layout_marginLeft="-13dp"
-                    android:layout_marginStart="-13dp"
                     android:layout_toEndOf="@+id/textView6"
                     android:layout_toRightOf="@+id/textView6"
-                    android:src="@drawable/icon_nekom" />
+                    android:src="@drawable/icon_nekom"
+                    android:contentDescription="@string/nekom"/>
 
                 <TextView
                     android:id="@+id/textView8"
@@ -97,8 +91,6 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_alignTop="@+id/imageView2"
-                    android:layout_marginEnd="12dp"
-                    android:layout_marginRight="12dp"
                     android:layout_marginTop="5dp"
                     android:text="@string/nekom_1" />
 
@@ -128,8 +120,6 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginStart="29dp"
                     android:layout_marginTop="20dp"
                     android:text="@string/month_akaryon" />
 
@@ -148,11 +138,10 @@
                     android:layout_width="65dp"
                     android:layout_height="65dp"
                     android:layout_alignTop="@+id/textView2"
-                    android:layout_marginLeft="-13dp"
-                    android:layout_marginStart="-13dp"
                     android:layout_toEndOf="@+id/textView"
                     android:layout_toRightOf="@+id/textView"
-                    android:src="@drawable/icon_akaryon" />
+                    android:src="@drawable/icon_akaryon"
+                    android:contentDescription="@string/akaryon"/>
 
                 <TextView
                     android:id="@+id/textView3"
@@ -170,8 +159,6 @@
                     android:layout_alignBottom="@+id/textView2"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
-                    android:layout_marginEnd="12dp"
-                    android:layout_marginRight="12dp"
                     android:text="@string/akaryon_1" />
 
                 <TextView
@@ -201,8 +188,6 @@
                     android:layout_width="90dp"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginStart="20dp"
                     android:layout_marginTop="25dp"
                     android:text="@string/year_comm_service"
                     android:textSize="16sp"
@@ -212,12 +197,11 @@
                     android:id="@+id/imageView12"
                     android:layout_width="65dp"
                     android:layout_height="65dp"
-                    android:layout_marginLeft="-11dp"
-                    android:layout_marginStart="-11dp"
                     android:layout_below="@+id/textView16"
                     android:layout_toEndOf="@+id/textView16"
                     android:layout_toRightOf="@+id/textView16"
-                    android:src="@drawable/icon_zivi" />
+                    android:src="@drawable/icon_zivi"
+                    android:contentDescription="@string/comm_service"/>
 
                 <TextView
                     android:id="@+id/textView18"
@@ -236,17 +220,13 @@
                     android:layout_width="150dp"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="12dp"
-                    android:layout_marginEnd="12dp"
                     android:layout_marginTop="5dp"
                     android:gravity="end"
                     android:text="@string/red_cross"
                     android:layout_below="@+id/textView18" />
 
-
             </RelativeLayout>
         </RelativeLayout>
     </ScrollView>
-
 
 </RelativeLayout>
