--- a/app/src/main/res/layout/fragment_about2.xml
+++ b/app/src/main/res/layout/fragment_about2.xml
@@ -17,7 +17,8 @@
             android:layout_height="123dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="21dp"
-            android:src="@drawable/icon_mongo_node" />
+            android:src="@drawable/icon_mongo_node"
+            android:contentDescription="@string/server"/>
 
         <TextView
             android:id="@+id/textView7"
