--- a/app/src/main/res/layout/fragment_about5.xml
+++ b/app/src/main/res/layout/fragment_about5.xml
@@ -18,7 +18,8 @@
             android:id="@+id/imageView3"
             android:src="@drawable/icon_wikitude"
             android:layout_marginTop="21dp"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:contentDescription="@string/augmented"/>
 
         <TextView
             style="@style/MainScreenFont"
