--- a/app/src/main/res/layout/include_cardview.xml
+++ b/app/src/main/res/layout/include_cardview.xml
@@ -4,19 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     card_view:cardCornerRadius="4dp"
-    android:layout_margin="5dp"
-    android:background="#ffffff">
+    android:layout_margin="5dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="100dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/sketch_header"
-            android:id="@+id/cardImage" />
 
         <TextView
             android:id="@+id/cardTitle"
@@ -25,9 +17,8 @@
             android:gravity="center_vertical"
             android:textColor="#ffffff"
             android:fontFamily="sans-serif-light"
-            android:textSize="20dp"
-            android:background="#70000000"
-            android:layout_alignBottom="@+id/cardImage"
+            android:textSize="20sp"
+            android:background="@color/black"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:paddingLeft="12dp"
