--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -6,4 +6,6 @@
     <dimen name="main_profile_size">130dp</dimen>
     <dimen name="main_icon_small_size">70dp</dimen>
     <dimen name="main_icon_large_size">100dp</dimen>
+
+    <dimen name="layout_side_margin">12dp</dimen>
 </resources>
