--- a/app/src/main/res/layout/fragment_about2.xml
+++ b/app/src/main/res/layout/fragment_about2.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context="at.kropf.curriculumvitae.fragment.About2Fragment">
+    tools:context="at.kropf.curriculumvitae.fragment.AboutFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
