--- a/app/src/main/res/layout/fragment_about4.xml
+++ b/app/src/main/res/layout/fragment_about4.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    tools:context="at.kropf.curriculumvitae.fragment.About4Fragment"
+    tools:context="at.kropf.curriculumvitae.fragment.AboutFragment"
     android:background="@color/colorPrimary">
 
     <LinearLayout
